2005-11-24  Werner Koch  <wk@g10code.com>

	Released 0.9.13.
	
	* configure.ac: Bumped LT vesion to C15/A7/R0.

2005-08-01  Werner Koch  <wk@g10code.com>

	Released 0.9.12.

	* configure.ac: Bumped LT version to C14/A6/R1.

2005-06-02  Werner Koch  <wk@g10code.com>

	* gl/, gl/m4/: New.
	* configure.ac: Add test for gnulib module alloca.
	* Makefile.am (SUBDIRS): Include gl/

2005-04-20  Werner Koch  <wk@g10code.com>

	* configure.ac: Fixed typo in saving CFLAGS for gpg-error symbol
	test.

	Released 0.9.11.
	
2005-04-19  Werner Koch  <wk@g10code.com>

	* configure.ac: Bumped LT version to C14/A6/R0 due to a new
	interface.

	* acinclude.m4 (GNUPG_CHECK_TYPEDEF): Added.  Taken from gnupg 1.4

2005-04-18  Werner Koch  <wk@g10code.com>

	* configure.ac: Check for a new gpg-error symbol.

2005-03-16  Werner Koch  <wk@g10code.com>

	* Makefile.am (AUTOMAKE_OPTIONS): Add option to create bzip 2 file
	and to use the m4 directory.
	* acinclude.m4: Removed all code.  It belongs into m4/.

2004-12-18  Werner Koch  <wk@g10code.com>

	* configure.ac: Print a hint about failed corss compilations.
	* autogen.sh: Add --build-w32 option.

2004-12-03  Werner Koch  <wk@g10code.com>

	Released 0.9.10.
	
	* configure.ac: Bumped LT version to C13/A5/R2.

2004-11-25  Werner Koch  <wk@g10code.com>

	* configure.ac: Define CROSS_COMPILING make conditional
	* Makefile.am (SUBDIRS): Don't run tests when cross compiling.

2004-09-27  Werner Koch  <wk@g10code.com>

	Released 0.9.9.

	* configure.ac: Bumped LT version to C13/A5/R2.
	
	* configure.ac: AC_GNU_SOURCE instead of AH_TOP.
	* config.guess, config.sub: Updated.
	* ltmain.sh: Updated to 1.5.6

2004-07-22  Werner Koch  <wk@g10code.de>

	Released 0.9.8.

	* configure.ac: Bumped LT version to C13/A5/R1.

2004-06-08  Werner Koch  <wk@gnupg.org>

	Released 0.9.7.
	
	* configure.ac: Bumped LT version to C13/A5/R0.

2004-04-29  Werner Koch  <wk@gnupg.org>

	Released 0.9.6.
	
	* configure.ac: Bumped LT version to C12/A4/R0.
