@@ -1,3 +1,12 @@
+2006-05-11  Werner Koch  <wk@g10code.com>
+
+	* ber-decoder.c (decoder_next): Print error description returned
+	from BER reader in debug mode.
+	(struct ber_decoder_s): New fields OUTER_SEQUENCE_LENGTH,
+	IGNORE_GARBAGE and FIRST_TAG_SEEN.
+	(decoder_next): Implement hack for the Siemens CA to ignore a
+	trailing byte.
+
 2006-05-03  Werner Koch  <wk@g10code.com>
 
 	* ber-decoder.c (decoder_next): Zero out NODE.
